--- a/index.html
+++ b/index.html
@@ -9,26 +9,30 @@
 	</head>
 
 	<body>
-		<h2>dit is een h2 subkop</h2>
-		<h2>dit is een h2 subkop</h2>
-		<h2>dit is een h2 subkop</h2>
-		<h2>dit is een h2 subkop</h2>
-		<h2>dit is een h2 subkop</h2>
-		<h2>dit is een h2 subkop</h2>
+		<h1>Javascript loops</h1>
+		<p>de <strong>for_of loop</strong> wordt gebruikt om met een loop bestaande elementen aan te passen of te wijzigen, en de <strong>incremental loop</strong> wordt gebruikt om met een loop uit het niets nieuwe elementen te creëren!</p>
 
-		<h3>Blokjes</h3>
+		<h2>Bestaande elementen manipuleren (For_of loop)</h2>
+		<h3>Dit wordt gewijzigd!</h3>
+		<h3>Dit wordt gewijzigd!</h3>
+		<h3>Dit wordt gewijzigd!</h3>
+		<h3>Dit wordt gewijzigd!</h3>
+		<h3>Dit wordt gewijzigd!</h3>
+		<h3>Dit wordt gewijzigd!</h3>
+
+		<h2>Bestaande elementen manipuleren (For_of loop)</h2>
 		<section class="blokjes"></section>
 		<section class="blokjes"></section>
 		<section class="blokjes"></section>
 		<section class="blokjes"></section>
 
-		<h3>Balletjes</h3>
+		<h2>Bestaande elementen selecteren (For_of loop)</h2>
 		<section class="balletjes"></section>
 		<section class="balletjes"></section>
 		<section class="balletjes"></section>
 		<section class="balletjes"></section>
 
-		<h3>landschap met boompjes</h3>
+		<h2>Nieuwe elementen creëren (Incremental loop)</h2>
 		<section id="landschap"></section>
 
 		<script src="scripts.js"></script>
